2022-09-19T16:24:19Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3084006263
* notice: last 14d: unq all: 2 28
* notice: prev accum: outdated-unq outdated-all / unq all: 178 339 / 196 366
* notice: next accum: outdated-unq outdated-all / unq all: 178 339 / 197 367
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-09-19]

2022-09-19T08:26:55Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3080950129
* notice: last 14d: unq all: 2 27
* notice: prev accum: outdated-unq outdated-all / unq all: 178 339 / 195 365
* notice: next accum: outdated-unq outdated-all / unq all: 178 339 / 196 366
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-19]

2022-09-19T01:57:08Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3079454009
* notice: last 14d: unq all: 2 26
* notice: prev accum: outdated-unq outdated-all / unq all: 178 339 / 195 364
* notice: next accum: outdated-unq outdated-all / unq all: 178 339 / 195 365
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2022-09-18]

2022-09-18T08:20:23Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3076424967
* notice: last 14d: unq all: 2 25
* notice: prev accum: outdated-unq outdated-all / unq all: 178 339 / 193 362
* notice: next accum: outdated-unq outdated-all / unq all: 178 339 / 195 364
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-09-18]

2022-09-17T16:23:28Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3074010895