@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-19T16:24:19Z",
+  "timestamp" : "2022-09-20T01:49:39Z",
   "count_outdated" : 339,
   "uniques_outdated" : 178,
-  "count" : 367,
+  "count" : 368,
   "uniques" : 197,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-09-19T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
     }
