@@ -1,5 +1,5 @@
 {
-  "count": 28,
+  "count": 29,
   "uniques": 2,
   "clones": [
     {
@@ -64,7 +64,7 @@
     },
     {
       "timestamp": "2022-09-19T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
