@@ -1,3 +1,11 @@
+2022-09-20T01:49:39Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3086866614
+* notice: last 14d: unq all: 2 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 178 339 / 197 367
+* notice: next accum: outdated-unq outdated-all / unq all: 178 339 / 197 368
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2022-09-19]
+
 2022-09-19T16:24:19Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3084006263
 * notice: last 14d: unq all: 2 28
